tests/snapshots/contract_snapshot_exhaustive__exhaustive_envelope_event_tool_call.snap
---
source: tests/contract_snapshot_exhaustive.rs
expression: env
---
{
  "t": "event",
  "ref_id": "run-exhaustive-001",
  "event": {
    "ts": "2025-07-01T12:00:00Z",
    "type": "tool_call",
    "tool_name": "edit_file",
    "tool_use_id": "tu_env_1",
    "parent_tool_use_id": null,
    "input": {
      "new": "fix",
      "old": "bug",
      "path": "src/main.rs"
    }
  }
}
