tests/snapshots/contract_snapshot_exhaustive__exhaustive_envelope_fatal_with_ref.snap
---
source: tests/contract_snapshot_exhaustive.rs
expression: env
---
{
  "t": "fatal",
  "ref_id": "run-exhaustive-001",
  "error": "sidecar process exited with code 137 (OOM killed)",
  "error_code": "backend_crashed"
}
