tests/snapshots/contract_snapshot_exhaustive__exhaustive_event_assistant_delta.snap
---
source: tests/contract_snapshot_exhaustive.rs
expression: e
---
{
  "ts": "2025-07-01T12:00:00Z",
  "type": "assistant_delta",
  "text": "Let me "
}
