tests/snapshots/contract_snapshot_exhaustive__exhaustive_event_command_executed.snap
---
source: tests/contract_snapshot_exhaustive.rs
expression: e
---
{
  "ts": "2025-07-01T12:00:00Z",
  "type": "command_executed",
  "command": "cargo test --lib",
  "exit_code": 0,
  "output_preview": "test result: ok. 47 passed; 0 failed"
}
